--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,7 @@ input[type='number'] {
 
 .btn {
   cursor: pointer;
-  background-color: #5b3bfd;
+  background-color: #9c88ff;
   box-shadow: var(--box-shadow);
   color: #fff;
   border: 0;
